(executable
 (name pp)
 (modules pp)
 (libraries ppxlib)
 (preprocess (pps ppxlib.metaquot ppx_combust)))

(library
 (name ppx_combust)
 (kind ppx_deriver)
 (modules combust)
 (package ppx_combust)
 (flags (:standard -w -27))
 (libraries ppxlib base fmt ppx_deriving.api)
 (preprocess
  (pps ppxlib.metaquot)))

