(executable
 (name pp)
 (modules pp)
 (libraries ppx_combust ppxlib))

(rule
 (targets test.actual.ml)
 (deps (:pp pp.exe) (:input test.ml))
 (action (progn
          (run ./%{pp} --impl %{input} -o %{targets})
          (run ocamlformat -i %{targets}))))

(rule
 (alias runtest)
 (deps (file test.expected.ml) (file test.actual.ml))
 (action (diff test.expected.ml test.actual.ml)))
